windows high contrast mode fixes:   - outline colour on tag and notification panel changed to match text colour   - highlighted autocomplete suggestion text colour and border colour changed to the "highlight" keyword colour   - card links have an outline on focus only

--- a/src/base/helpers/high-contrast/_high-contrast.scss
+++ b/src/base/helpers/high-contrast/_high-contrast.scss
@@ -14,7 +14,7 @@
 
 @mixin ds_high-contrast-outline($width: 2px) {
     @media screen and (forced-colors: active) and (prefers-contrast: more) {
-        outline: $width solid highlight !important;
+        outline: $width solid currentColor !important;
         outline-offset: #{$width * -1} !important;
     }
 }
